--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -20,11 +20,7 @@ jobs:
       timeout: 5m
     - put: release-candidate
       params:
-        file: artifact-dir/spring-music*.war
-    - put: git-repo
-      params:
-        repository: git-repo
-        tag: version/number
+        file: artifact-dir/spring-music-*.war
     - put: version
       params: {file: version/number}
 
@@ -43,11 +39,11 @@ jobs:
       params:
         manifest: git-repo/manifest-test.yml
         current_app_name: spring-music-test
-        path: release-candidate/spring-music*.war
+        path: release-candidate/spring-music-*.war
     - task: verify
       file: git-repo/ci/tasks/verify-test.yml
       params:
-        CONCOURSE_DEMO_URL: {{VERIFY_URL}}
+        CONCOURSE_DEMO_URL: http://bb-spring-music-{{CF_TEST_SPACE}}.cfapps.haas-46.pez.pivotal.io
 
   - name: promote-to-uat
     serial_groups: [version]
@@ -64,7 +60,7 @@ jobs:
       params:
         manifest: git-repo/manifest-uat.yml
         current_app_name: spring-music-uat
-        path: release-candidate/spring-music*.war
+        path: release-candidate/spring-music-*.war
 
   - name: ship-it
     serial_groups: [version]
@@ -118,7 +114,6 @@ resources:
   source:
     uri: {{GIT_REPO}}
     branch: master
-    private_key: {{GIT_PRIVATE_KEY}}
 
 - name: deploy-test-app
   type: cf
