--- a/manifest-test.yml
+++ b/manifest-test.yml
@@ -3,4 +3,4 @@ applications:
 - name: spring-music-test
   memory: 512M
   instances: 1
-  host: bb-spring-music-test
+  host: tsg-spring-music-test
