--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 ---
 applications:
 - name: spring-music
+  host: tsg-spring-music
   memory: 512M
   instances: 1
   path: build/libs/spring-music.war
